--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.testcontainers:testcontainers:1.19.3'
+    implementation 'org.jetbrains:annotations:24.0.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
