--- a/user/build.gradle
+++ b/user/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     implementation project(':common')
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
