chore: Kafka 의존성 추가 및 빌드 설정 업데이트

--- a/issue_coupon/build.gradle
+++ b/issue_coupon/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     implementation project(':user')
     implementation project(':coupon')
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
